--- a/static/css/ACM.css
+++ b/static/css/ACM.css
@@ -339,3 +339,46 @@ button.ghost {
     border-radius: 20px;
     border:1px solid yellow;
 }
+
+.showMessage{
+    width: 200px;
+    height:40px;
+    padding: 5px 10px;
+    border:2px solid palegoldenrod;
+    border-radius: 10px;
+    position: fixed;
+    top: 5%;
+    left: 70%;
+    color: #ffffff;
+    text-align: center;
+    font-weight: bold;
+}
+
+.showMessageSuccess {
+    background-color: #00B7EE;
+}
+
+.showMessageError {
+    background-color: #ff0000;
+}
+
+.control{
+    display: inline-flex;
+    width:100%;
+    height:40px;
+    margin-top: 4px;
+}
+
+#adveri{
+    margin:0;
+    border:1px solid aquamarine;
+    border-radius: 10px;
+    padding:2px;
+}
+
+#control{
+    width:40%;
+    margin:0;
+    margin-top: 6px;
+    margin-left: 20px;
+}
